--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,14 @@
+appdirs==1.4.3
+asn1crypto==0.24.0
+attrs==19.1.0
 beautifulsoup4==4.8.0
+black==19.3b0
 cachetools==3.1.1
 certifi==2019.9.11
+cffi==1.12.3
 chardet==3.0.4
+Click==7.0
+cryptography==2.7
 google-api-python-client==1.7.11
 google-auth==1.6.3
 google-auth-httplib2==0.0.3
@@ -14,11 +21,14 @@ oauth2client==4.1.3
 oauthlib==3.1.0
 pyasn1==0.4.7
 pyasn1-modules==0.2.6
+pycparser==2.19
+pyOpenSSL==19.0.0
 requests==2.22.0
 requests-oauthlib==1.2.0
 rsa==4.0
 selenium==3.141.0
 six==1.12.0
 soupsieve==1.9.4
+toml==0.10.0
 uritemplate==3.0.0
 urllib3==1.25.6
